<resources>
    <string name="app_name">Reminder</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="edit_reminder_title">Task Reminder - Edit</string>
    <string name="no_reminders">No Reminders Yet</string>
    <string name="menu_insert">Add Reminder</string>
    <string name="menu_delete">Delete Reminder</string>
    <string name="menu_settings">Settings</string>
    <string name="title">Title</string>
    <string name="body">Body</string>
    <string name="confirm">Save</string>
    <string name="edit_reminder">Edit Reminder</string>
    <string name="date">Reminder Date:</string>
    <string name="time">Reminder Time:</string>

    <!-- Toasts -->
    <string name="task_saved_message">Task has been saved</string>

    <!-- Notification Bar -->
    <string name="notify_new_task_message">A task needs to be reviewed!</string>
    <string name="notify_new_task_title">Task Reminder!</string>

    <!-- Preferences -->
    <string name="pref_category_task_defaults_key">task_default_category</string>
    <string name="pref_category_task_defaults_title">Task Title Default</string>
    <string name="pref_task_title_key">default_reminder_title</string>
    <string name="pref_task_title_dialog_title">Default Reminder Title</string>
    <string name="pref_task_title_message">The default title for a reminder.</string>
    <string name="pref_task_title_summary">Default title for reminders.</string>
    <string name="pref_task_title_title">Default Reminder Title</string>

    <string name="pref_category_datetime_key">date_time_default_category</string>
    <string name="pref_category_datetime_title">Date Time Defaults</string>
    <string name="pref_default_time_from_now_key">time_from_now_default</string>
    <string name="pref_default_time_from_now_dialog_title">Time From Now</string>
    <string name="pref_default_time_from_now_message">The default time from now that a new reminder should be set to.</string>
    <string name="pref_default_time_from_now_summary">Sets the default time for a reminder.</string>
    <string name="pref_default_time_from_now_title">Default Reminder Time</string>

    <string name="ToneSelectTitle">Select Tone</string>
    <string name="first_guide">Switch from left to right to open drawer</string>
    <string name="create">Create</string>
    <string name="about">About</string>
    <string name="setting">Setting</string>
    <string name="Setting">Setting</string>
    <string name="title_warning">WARNING</string>
    <string name="warning_mode_all">Please go to setting and change display option to use this function!</string>
    <string name="about_us">ABOUT US</string>
    <string name="remind_enter_title_body">Please enter title and body of your task</string>
    <string name="toast_display_day">Display by day</string>
    <string name="toast_display_all">Display all remind</string>
    <string name="repeat">Repeat</string>
    <string name="interval">Interval:</string>
    <string name="sound">Sound</string>
    <string name="vibrate">Vibrate</string>
    <string name="led">Led</string>
    <string name="ringtone">Ringtone</string>
    <string name="display">Display</string>
    <string name="day">Day</string>
    <string name="all">All</string>
    <string name="today">Today</string>
    <string name="empty_list">No data</string>
    <string name="menu_delete_all">Delete all Remider</string>
    <string name="action_menu">Select the action</string>
    <string name="confirm_title">Confirm</string>
    <string name="confirm_body">Do you want to delete all reminder?</string>
    <string name="btn_confirm_yes">Yes</string>
    <string name="osbtn_confirm_no">No</string>
    <string name="about_app">* Version: 1.0* Author: Tran Quoc Dai - Mach Chi Da - Tran Quang Duy - Le Cong Doan - Nguyen Le Duy - Ho Chi Minh University of Technology\n* This application is developed by team with nonprofit purposes</string>

</resources>
